--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.3"
   },
